--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE=https://tinylink-backend-8iuamys4g-kanimozhi-ravis-projects.vercel.app
-VITE_BASE_URL=https://tinylink-backend-8iuamys4g-kanimozhi-ravis-projects.vercel.app
+VITE_API_BASE=https://tinylink-backend.vercel.app
+VITE_BASE_URL=https://tinylink-backend.vercel.app
